--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ USER_EMAIL = sainijappy01@gmail.com
 PASS = ellxnepirezhdbna
 key_secret = 9QATOPSak0ILXOv6oBcEz9i9
 key_id = rzp_test_yBiUMWdvGMIun4
-
+PORT = 3007
 
 
